header and footer markup added, and js files for injecting html code templates added

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -4,12 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raaga-Music-Player</title>
 
+    <title>Raaga : The Music Player</title>
+
+    <!-- CSS imports -->
     <link href="styles/shared.css" rel="stylesheet">
-    <script></script>
+
+    <!-- JS imports -->
+    <script src="scripts/html-templates.js" defer></script>
+    <script src="scripts/html-injector-indexPage.js" defer></script>
+
 </head>
 <body>
+    <!-- Start of HEADER -->
+    <header>
+        <!-- Code injected here using 'html-injector-indexPage.js' -->
+        <div>
+            <div class="logo">Raaga</div>
+            <div class="search-bar"></div>
+            <nav>
+                <ul class="nav-list">
+                    <li>Mode</li>
+                    <li>Favorites</li>
+                    <li>LogIn</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- End of HEADER -->
+
+    <!-- Start of MAIN-BODY -->
+    <main>
+
+    </main>
+    <!-- End of MAIN-BODY -->
+
+    <!-- Start of FOOTER -->
+    <footer>
+        <!-- Code injected here using 'html-injector-indexPage.js' -->
+        <div class="share">
+            <p>Share Raaga on:</p>
+            <img src="" alt="Share on Facebook" class="share-icon">
+            <img src="" alt="Share on Twitter" class="share-icon">
+            <img src="" alt="Share on Instagram" class="share-icon">
+        </div>
+        <div class="quick-links-container">Quick links:</div>
+            <ul class="quick-links-list">
+                <span class="quick-link-list-heading">List 1</span>
+                <li class="quick-links-list-item">List Item 1</li>
+                <li class="quick-links-list-item">List Item 2</li>
+                <li class="quick-links-list-item">List Item 3</li>
+            </ul>
+            <ul class="quick-links-list">
+                <span class="quick-link-list-heading">List 2</span>
+                <li class="quick-links-list-item">List Item 1</li>
+                <li class="quick-links-list-item">List Item 2</li>
+                <li class="quick-links-list-item">List Item 3</li>
+            </ul>
+            <ul class="quick-links-list">
+                <span class="quick-link-list-heading">List 3</span>
+                <li class="quick-links-list-item">List Item 1</li>
+                <li class="quick-links-list-item">List Item 2</li>
+                <li class="quick-links-list-item">List Item 3</li>
+            </ul>
+    </footer>
+    <!-- End of FOOTER -->
     
 </body>
 </html>
