--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -1,74 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Raaga : The Music Player</title>
+        <title>Raaga : The Music Player</title>
 
-    <!-- CSS imports -->
-    <link href="styles/shared.css" rel="stylesheet">
+        <!-- CSS imports -->
+        <link href="styles/shared.css" rel="stylesheet" />
 
-    <!-- JS imports -->
-    <script src="scripts/html-templates.js" defer></script>
-    <script src="scripts/html-injector-indexPage.js" defer></script>
+        <!-- FONTAWESOME Icons Import-->
+        <script
+            src="https://kit.fontawesome.com/5872c572b3.js"
+            crossorigin="anonymous"
+        ></script>
 
-</head>
-<body>
-    <!-- Start of HEADER -->
-    <header>
-        <!-- Code injected here using 'html-injector-indexPage.js' -->
-        <div>
-            <div class="logo">Raaga</div>
-            <div class="search-bar"></div>
-            <nav>
-                <ul class="nav-list">
-                    <li>Mode</li>
-                    <li>Favorites</li>
-                    <li>LogIn</li>
+        <!-- JS imports -->
+        <script src="scripts/html-templates.js" defer></script>
+        <script src="scripts/html-injector-indexPage.js" defer></script>
+    </head>
+    <body>
+        <!-- Start of HEADER -->
+        <header>
+            <!-- Code injected here using 'html-injector-indexPage.js' -->
+            <div>
+                <div class="logo">Raaga</div>
+                <div class="search-bar"></div>
+                <nav>
+                    <ul class="nav-list">
+                        <li>Mode</li>
+                        <li>Favorites</li>
+                        <li>LogIn</li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <!-- End of HEADER -->
+
+        <!-- Start of ASIDE-SECTION-->
+        <aside>
+
+        </aside>
+        <!-- End of ASIDE-SECTION-->
+
+        <!-- Start of MAIN-BODY -->
+        <main>
+            <div class="carousel-container"></div>
+            <div class="favorites-container"></div>
+            <div class="latest-releases-container"></div>
+            <div class="artists-container"></div>
+            <div class="genres-container"></div>
+            <div class="radios-container"></div>
+        </main>
+        <!-- End of MAIN-BODY -->
+
+        <!-- Start of FOOTER -->
+        <footer>
+            <!-- Code injected here using 'html-injector-indexPage.js' -->
+            <div class="share-icons-container">
+                <p>Share Raaga on:</p>
+                <i class="fab fa-facebook fa-2x share-icon"></i>
+                <i class="fab fa-twitter fa-2x share-icon"></i>
+                <i class="fab fa-instagram fa-2x share-icon"></i>
+            </div>
+            <div class="quick-links-container-heading">
+                <p>
+                    Quick links :
+                </p>
+            </div>
+            <div class="quick-links-container">
+                <ul class="quick-links-list">
+                    <span class="quick-link-list-heading">List 1</span>
+                    <li class="quick-links-list-item">List Item 1</li>
+                    <li class="quick-links-list-item">List Item 2</li>
+                    <li class="quick-links-list-item">List Item 3</li>
                 </ul>
-            </nav>
-        </div>
-    </header>
-    <!-- End of HEADER -->
 
-    <!-- Start of MAIN-BODY -->
-    <main>
+                <ul class="quick-links-list">
+                    <span class="quick-link-list-heading">List 2</span>
+                    <li class="quick-links-list-item">List Item 1</li>
+                    <li class="quick-links-list-item">List Item 2</li>
+                    <li class="quick-links-list-item">List Item 3</li>
+                </ul>
 
-    </main>
-    <!-- End of MAIN-BODY -->
-
-    <!-- Start of FOOTER -->
-    <footer>
-        <!-- Code injected here using 'html-injector-indexPage.js' -->
-        <div class="share">
-            <p>Share Raaga on:</p>
-            <img src="" alt="Share on Facebook" class="share-icon">
-            <img src="" alt="Share on Twitter" class="share-icon">
-            <img src="" alt="Share on Instagram" class="share-icon">
-        </div>
-        <div class="quick-links-container">Quick links:</div>
-            <ul class="quick-links-list">
-                <span class="quick-link-list-heading">List 1</span>
-                <li class="quick-links-list-item">List Item 1</li>
-                <li class="quick-links-list-item">List Item 2</li>
-                <li class="quick-links-list-item">List Item 3</li>
-            </ul>
-            <ul class="quick-links-list">
-                <span class="quick-link-list-heading">List 2</span>
-                <li class="quick-links-list-item">List Item 1</li>
-                <li class="quick-links-list-item">List Item 2</li>
-                <li class="quick-links-list-item">List Item 3</li>
-            </ul>
-            <ul class="quick-links-list">
-                <span class="quick-link-list-heading">List 3</span>
-                <li class="quick-links-list-item">List Item 1</li>
-                <li class="quick-links-list-item">List Item 2</li>
-                <li class="quick-links-list-item">List Item 3</li>
-            </ul>
-    </footer>
-    <!-- End of FOOTER -->
-    
-</body>
+                <ul class="quick-links-list">
+                    <span class="quick-link-list-heading">List 3</span>
+                    <li class="quick-links-list-item">List Item 1</li>
+                    <li class="quick-links-list-item">List Item 2</li>
+                    <li class="quick-links-list-item">List Item 3</li>
+                </ul>
+            </div>
+        </footer>
+        <!-- End of FOOTER -->
+    </body>
 </html>
