Carousel placeholder created

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -36,16 +36,13 @@
                     <button><i class="fas fa-search"></i></button>
                 </div>
                 <nav>
-                    <!-- Hamburger menu icon: <i class="fas fa-bars"></i> -->
-                    <!-- Close menu icon: <i class="fas fa-times"></i> -->
-                    <!-- Search icon:  -->
                     <!-- Screen Reader friendly Hamburger menu button for mobile view-->
                     <button
                         class="nav-toggle-mobile"
                         aria-controls="nav-list"
                         aria-expanded="false"
                     >
-                        <span class="sr-only">Menu</span>
+                        <span class="screen-reader-only">Menu</span>
                     </button>
                     <ul id="nav-list" class="nav-list" data-visibility="false">
                         <li><a class="link" href="">Mode</a></li>
@@ -62,14 +59,14 @@
         <!-- End of ASIDE-SECTION-->
 
         <!-- Start of MAIN-BODY -->
-        <main>
-            <div class="carousel-container"></div>
-            <div class="favorites-container"></div>
-            <div class="latest-releases-container"></div>
-            <div class="artists-container"></div>
-            <div class="genres-container"></div>
-            <div class="radios-container"></div>
-        </main>
+        
+        <div class="carousel-container"><h1>Carousel text goes here</h1></div>
+        <div class="favorites-container"></div>
+        <div class="latest-releases-container"></div>
+        <div class="artists-container"></div>
+        <div class="genres-container"></div>
+        <div class="radios-container"></div>
+        
         <!-- End of MAIN-BODY -->
 
         <!-- Start of FOOTER -->
