Favourites section done stylewise

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -59,14 +59,78 @@
         <!-- End of ASIDE-SECTION-->
 
         <!-- Start of MAIN-BODY -->
-        
+
         <div class="carousel-container"><h1>Carousel text goes here</h1></div>
-        <div class="favorites-container"></div>
+
+        <div class="favorites-container">
+            <div class="favorites-container-heading">Favorites</div>
+            <div class="favorites-container-content item-with-bg">
+                <div class="favorites-sub-container item-with-bg">
+                    <div class="favourite-item-heading">Songs</div>
+                    <ul class="favorite-list">
+                        <li>
+                            <div class="favorites-item item-with-bg">
+                                <img
+                                    class="favorite-item-img"
+                                    src="https://images.pexels.com/photos/1246437/pexels-photo-1246437.jpeg?cs=srgb&dl=pexels-juan-pablo-serrano-arenas-1246437.jpg&fm=jpg"
+                                />
+                                <p class="favorite-item-text">Song Name</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="favorites-sub-container item-with-bg">
+                    <div class="favourite-item-heading">Artists</div>
+                    <ul class="favorite-list">
+                        <li>
+                            <div class="favorites-item item-with-bg">
+                                <img
+                                    class="favorite-item-img"
+                                    src="https://images.pexels.com/photos/1246437/pexels-photo-1246437.jpeg?cs=srgb&dl=pexels-juan-pablo-serrano-arenas-1246437.jpg&fm=jpg"
+                                />
+                                <p class="favorite-item-text">Artist Name</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="favorites-sub-container item-with-bg">
+                    <div class="favourite-item-heading">Genres</div>
+                    <ul class="favorite-list">
+                        <li>
+                            <div class="favorites-item item-with-bg">
+                                <img
+                                    class="favorite-item-img"
+                                    src="https://images.pexels.com/photos/1246437/pexels-photo-1246437.jpeg?cs=srgb&dl=pexels-juan-pablo-serrano-arenas-1246437.jpg&fm=jpg"
+                                />
+                                <p class="favorite-item-text">Genre Name</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="favorites-sub-container item-with-bg">
+                    <div class="favourite-item-heading">Radios</div>
+                    <ul class="favorite-list">
+                        <li>
+                            <div class="favorites-item item-with-bg">
+                                <img
+                                    class="favorite-item-img"
+                                    src="https://images.pexels.com/photos/1246437/pexels-photo-1246437.jpeg?cs=srgb&dl=pexels-juan-pablo-serrano-arenas-1246437.jpg&fm=jpg"
+                                />
+                                <p class="favorite-item-text">Radio Name</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <div class="latest-releases-container"></div>
         <div class="artists-container"></div>
         <div class="genres-container"></div>
         <div class="radios-container"></div>
-        
+
         <!-- End of MAIN-BODY -->
 
         <!-- Start of FOOTER -->
