--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -25,32 +25,6 @@
         <!-- Start of HEADER -->
         <header>
             <!-- Code injected here using 'html-injector-indexPage.js' -->
-            <div>
-                <div class="logo">Raaga</div>
-                <div class="search-bar">
-                    <input
-                        type="text"
-                        size="15"
-                        placeholder="Search song, artist etc."
-                    />
-                    <button><i class="fas fa-search"></i></button>
-                </div>
-                <nav>
-                    <!-- Screen Reader friendly Hamburger menu button for mobile view-->
-                    <button
-                        class="nav-toggle-mobile"
-                        aria-controls="nav-list"
-                        aria-expanded="false"
-                    >
-                        <span class="screen-reader-only">Menu</span>
-                    </button>
-                    <ul id="nav-list" class="nav-list" data-visibility="false">
-                        <li><a class="link" href="">Mode</a></li>
-                        <li><a class="link" href="">Favorites</a></li>
-                        <li><a class="link" href="">LogIn</a></li>
-                    </ul>
-                </nav>
-            </div>
         </header>
         <!-- End of HEADER -->
 
@@ -60,113 +34,21 @@
 
         <!-- Start of MAIN-BODY -->
 
-        <div class="carousel-container"><h1>Carousel text goes here</h1></div>
+        <div id="carousel-container" class="carousel-container"><h1>Carousel text goes here</h1></div>
 
-        <div class="favorites-container">
-            <div class="favorites-container-heading">Favorites</div>
-            <div class="favorites-container-content item-with-bg">
-                <div class="favorites-sub-container item-with-bg">
-                    <div class="favourite-item-heading">Songs</div>
-                    <ul class="favorite-list">
-                        <li>
-                            <div class="favorites-item item-with-bg">
-                                <img
-                                    class="favorite-item-img"
-                                    src="https://images.pexels.com/photos/1246437/pexels-photo-1246437.jpeg?cs=srgb&dl=pexels-juan-pablo-serrano-arenas-1246437.jpg&fm=jpg"
-                                />
-                                <p class="favorite-item-text">Song Name</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="favorites-sub-container item-with-bg">
-                    <div class="favourite-item-heading">Artists</div>
-                    <ul class="favorite-list">
-                        <li>
-                            <div class="favorites-item item-with-bg">
-                                <img
-                                    class="favorite-item-img"
-                                    src="https://images.pexels.com/photos/1246437/pexels-photo-1246437.jpeg?cs=srgb&dl=pexels-juan-pablo-serrano-arenas-1246437.jpg&fm=jpg"
-                                />
-                                <p class="favorite-item-text">Artist Name</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="favorites-sub-container item-with-bg">
-                    <div class="favourite-item-heading">Genres</div>
-                    <ul class="favorite-list">
-                        <li>
-                            <div class="favorites-item item-with-bg">
-                                <img
-                                    class="favorite-item-img"
-                                    src="https://images.pexels.com/photos/1246437/pexels-photo-1246437.jpeg?cs=srgb&dl=pexels-juan-pablo-serrano-arenas-1246437.jpg&fm=jpg"
-                                />
-                                <p class="favorite-item-text">Genre Name</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="favorites-sub-container item-with-bg">
-                    <div class="favourite-item-heading">Radios</div>
-                    <ul class="favorite-list">
-                        <li>
-                            <div class="favorites-item item-with-bg">
-                                <img
-                                    class="favorite-item-img"
-                                    src="https://images.pexels.com/photos/1246437/pexels-photo-1246437.jpeg?cs=srgb&dl=pexels-juan-pablo-serrano-arenas-1246437.jpg&fm=jpg"
-                                />
-                                <p class="favorite-item-text">Radio Name</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <div id="favorites-container" class="favorites-container">
+            <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
-        <div class="latest-releases-container"></div>
-        <div class="artists-container"></div>
-        <div class="genres-container"></div>
-        <div class="radios-container"></div>
+        <div id="latest-releases-container" class="latest-releases-container"></div>
+        <div id="artists-container" class="artists-container"></div>
+        <div id="genres-container" class="genres-container"></div>
+        <div id="radios-container" class="radios-container"></div>
 
         <!-- End of MAIN-BODY -->
 
         <!-- Start of FOOTER -->
         <footer>
             <!-- Code injected here using 'html-injector-indexPage.js' -->
-            <div class="share-icons-container">
-                <p>Share Raaga on:</p>
-                <i class="fab fa-facebook fa-2x share-icon"></i>
-                <i class="fab fa-twitter fa-2x share-icon"></i>
-                <i class="fab fa-instagram fa-2x share-icon"></i>
-            </div>
-            <div class="quick-links-container-heading">
-                <p>Quick links :</p>
-            </div>
-            <div class="quick-links-container">
-                <ul class="quick-links-list">
-                    <span class="quick-link-list-heading">List 1</span>
-                    <li class="quick-links-list-item">List Item 1</li>
-                    <li class="quick-links-list-item">List Item 2</li>
-                    <li class="quick-links-list-item">List Item 3</li>
-                </ul>
-
-                <ul class="quick-links-list">
-                    <span class="quick-link-list-heading">List 2</span>
-                    <li class="quick-links-list-item">List Item 1</li>
-                    <li class="quick-links-list-item">List Item 2</li>
-                    <li class="quick-links-list-item">List Item 3</li>
-                </ul>
-
-                <ul class="quick-links-list">
-                    <span class="quick-link-list-heading">List 3</span>
-                    <li class="quick-links-list-item">List Item 1</li>
-                    <li class="quick-links-list-item">List Item 2</li>
-                    <li class="quick-links-list-item">List Item 3</li>
-                </ul>
-            </div>
         </footer>
         <!-- End of FOOTER -->
     </body>
