Latest-Releases section's placeholder data, styling and template code created.

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -34,14 +34,22 @@
 
         <!-- Start of MAIN-BODY -->
 
-        <div id="carousel-container" class="carousel-container"><h1>Carousel text goes here</h1></div>
+        <div id="carousel-container" class="carousel-container">
+            <h1>Carousel text goes here</h1>
+        </div>
 
         <div id="favorites-container" class="favorites-container">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
-        <div id="latest-releases-container" class="latest-releases-container"></div>
+
+        <div id="latest-releases-container" class="latest-releases-container">
+            <!-- Code injected here using 'html-injector-indexPage.js' -->
+        </div>
+
         <div id="artists-container" class="artists-container"></div>
+
         <div id="genres-container" class="genres-container"></div>
+
         <div id="radios-container" class="radios-container"></div>
 
         <!-- End of MAIN-BODY -->
