Artists placeholder, styling andd template code created

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -46,7 +46,9 @@
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
-        <div id="artists-container" class="artists-container"></div>
+        <div id="artists-container" class="artists-container">
+            <!-- Code injected here using 'html-injector-indexPage.js' -->
+        </div>
 
         <div id="genres-container" class="genres-container"></div>
 
