Genres section placeholder, layouting, styling, and template code created.

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -50,8 +50,9 @@
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
-        <div id="genres-container" class="genres-container"></div>
-
+        <div id="genres-container" class="genres-container">
+            <!-- Code injected here using 'html-injector-indexPage.js' -->
+        </div>
         <div id="radios-container" class="radios-container"></div>
 
         <!-- End of MAIN-BODY -->
