Radio Stations section layout, style, placeholder data and template code created.

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -53,7 +53,9 @@
         <div id="genres-container" class="genres-container">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
-        <div id="radios-container" class="radios-container"></div>
+        <div id="radios-container" class="radios-container">
+            <!-- Code injected here using 'html-injector-indexPage.js' -->
+        </div>
 
         <!-- End of MAIN-BODY -->
 
