--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -29,7 +29,325 @@
         <!-- End of HEADER -->
 
         <!-- Start of ASIDE-SECTION-->
-        <aside></aside>
+        <aside>
+            <div>
+                <div class="aside-header item-with-bg">
+                    <div class="container-heading">Playlist</div>
+                    <div class="dropdown">Btn</div>
+                </div>
+
+                <div class="container-content item-with-bg">
+                    <ul class="list-in-container playlist-ul">
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="playlist-li-in-container">
+                            <div class="playlist-item item-with-bg">
+                                <div class="left-half">
+                                    <div class="text-subtitle">01</div>
+                                    <img
+                                        class="playlist-imgcontainer"
+                                        src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
+                                    />
+                                    <div>
+                                            <div class="text-title">Song Name</div>
+                                            <div class="text-subtitle">Artist Name</div>
+                                    </div>
+                                </div>
+                                <div class="right-half">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </aside>
         <!-- End of ASIDE-SECTION-->
 
         <!-- Start of MAIN-BODY -->
