--- a/codingNinjas/Frontend/MusicPlayer/artist.html
+++ b/codingNinjas/Frontend/MusicPlayer/artist.html
@@ -738,7 +738,43 @@
 
         <!-- Start of MAIN-BODY -->
 
-        <div id="artist-cover" class="artist-cover"></div>
+        <div id="artist-cover" class="artist-cover flex-row item-with-bg">
+            <div class="artist-imgcontainer">
+            <img
+                src="https://images.pexels.com/photos/210887/pexels-photo-210887.jpeg"
+            />
+            </div>
+            <div class="artist-textcontent-container flex-col">
+                <div>
+                    <div class="flex-row">
+                        <div>
+                            <div class="container-heading">Artist's name</div>
+                            <div class="text-subtitle">British Band</div>
+                        </div>
+                        <div class="text-subtitle">
+                            <strong>867</strong> Followers
+                        </div>
+                    </div>
+                    <div class="text-subtitle">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Velit sint quis exercitationem maxime fugit fugiat
+                        repellendus reprehenderit recusandae, quisquam dolorum
+                        culpa neque aspernatur, placeat doloribus provident
+                        distinctio voluptatibus ipsam veritatis.
+                    </div>
+                </div>
+                <div>
+                    <div class="flex-row buttons">
+                        <a href="" class="link">Play All</a>
+                        <a href="" class="link">Follow</a>
+                    </div>
+                    <div class="text-subtitle">
+                        <strong>453</strong> Tracks |
+                        <strong>145</strong> Albums
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div id="artist-songs" class="artist-songs">
             <div class="container-heading">Artist's Songs</div>
