Dropdown button in aside menu is now added in index.html

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -33,7 +33,18 @@
             <div>
                 <div class="aside-header item-with-bg">
                     <div class="container-heading">Playlist</div>
-                    <div class="dropdown">Btn</div>
+                    <!-- Start of DROPDOWN Menu on Aside -->
+                    <div class="dropdown">
+                        <select>
+                            <option value="">Playlist</option>
+                            <option value="">Favorite Songs</option>
+                            <option value="">Favorite Artists</option>
+                        </select>
+                        <div class="dropdown-arrow">
+                            <i class="fas fa-caret-down"></i>
+                        </div>
+                    </div>
+                    <!-- End of DROPDOWN Menu on Aside -->
                 </div>
 
                 <div class="container-content item-with-bg">
