Carousel basic complete. Pexel-Images also lower-res now.

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -20,6 +20,7 @@
         <script src="scripts/html-templates.js" defer></script>
         <script src="scripts/html-injector-indexPage.js" defer></script>
         <script src="scripts/nav.js" defer></script>
+        <script src="scripts/carousel.js" defer></script>
     </head>
     <body>
         <!-- Start of HEADER -->
@@ -58,8 +59,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -76,8 +79,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -94,8 +99,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -112,8 +119,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -130,8 +139,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -148,8 +159,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -166,8 +179,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -184,8 +199,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -202,8 +219,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -220,8 +239,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -238,8 +259,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -256,8 +279,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -274,8 +299,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -292,8 +319,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -310,8 +339,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -328,8 +359,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -346,8 +379,10 @@
                                         src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg"
                                     />
                                     <div>
-                                            <div class="text-title">Song Name</div>
-                                            <div class="text-subtitle">Artist Name</div>
+                                        <div class="text-title">Song Name</div>
+                                        <div class="text-subtitle">
+                                            Artist Name
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-half">
@@ -364,7 +399,50 @@
         <!-- Start of MAIN-BODY -->
 
         <div id="carousel-container" class="carousel-container">
-            <h1>Carousel text goes here</h1>
+<!--            <div class="super-container">-->
+                <button class="carousel_button carousel_button-prev is-hidden">
+                    &#10094;
+                </button>
+                <div class="carousel">
+                    <div class="carousel_track-container">
+                        <ul class="carousel_track">
+                            <li class="carousel-slide current-slide">
+                                <img
+                                src="https://images.pexels.com/photos/210887/pexels-photo-210887.jpeg?auto=compress&cs=tinysrgb&h=350"
+                                class="carousel-slide-img"
+                            </li>
+                            <li class="carousel-slide">
+                                <img
+                                src="https://images.pexels.com/photos/5650956/pexels-photo-5650956.jpeg?auto=compress&cs=tinysrgb&h=350"
+                                class="carousel-slide-img"
+                            </li>
+                            <li class="carousel-slide">
+                                <img
+                                src="https://images.pexels.com/photos/210887/pexels-photo-210887.jpeg?auto=compress&cs=tinysrgb&h=350"
+                                class="carousel-slide-img"
+                            </li>
+                            <li class="carousel-slide">
+                                <img
+                                src="https://images.pexels.com/photos/5650956/pexels-photo-5650956.jpeg?auto=compress&cs=tinysrgb&h=350"
+                                class="carousel-slide-img"
+                            </li>
+                            <li class="carousel-slide">
+                                <img
+                                src="https://images.pexels.com/photos/210887/pexels-photo-210887.jpeg?auto=compress&cs=tinysrgb&h=350"
+                                class="carousel-slide-img"
+                            </li>
+                            <li class="carousel-slide">
+                                <img
+                                src="https://images.pexels.com/photos/5650956/pexels-photo-5650956.jpeg?auto=compress&cs=tinysrgb&h=350"
+                                class="carousel-slide-img"
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <button class="carousel_button carousel_button-next">
+                    &#10095;
+                </button>
+           <!-- </div> -->
         </div>
 
         <div id="favorites-container" class="favorites-container">
