Carousel issue of height not 100% fixed, and some comments added.

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -399,11 +399,10 @@
         <!-- Start of MAIN-BODY -->
 
         <div id="carousel-container" class="carousel-container">
-<!--            <div class="super-container">-->
                 <button class="carousel_button carousel_button-prev is-hidden">
                     &#10094;
                 </button>
-                <div class="carousel">
+                <div class="carousel-div">
                     <div class="carousel_track-container">
                         <ul class="carousel_track">
                             <li class="carousel-slide current-slide">
@@ -442,7 +441,6 @@
                 <button class="carousel_button carousel_button-next">
                     &#10095;
                 </button>
-           <!-- </div> -->
         </div>
 
         <div id="favorites-container" class="favorites-container">
