Template JSON data added.

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -17,10 +17,16 @@
         ></script>
 
         <!-- JS imports -->
-        <script src="scripts/html-templates.js" defer></script>
-        <script src="scripts/html-injector-indexPage.js" defer></script>
-        <script src="scripts/nav.js" defer></script>
-        <script src="scripts/carousel.js" defer></script>
+            <!-- DATA Model imports-->
+                <script src="assets/data/artists-data.js" defer></script>
+                <script src="assets/data/shared-data.js" defer></script>
+            <!-- Template generation code imports -->
+                <script src="scripts/html-templates.js" defer></script>
+                <script src="scripts/html-injector-indexPage.js" defer></script>
+            <!-- Navigation related -->
+                <script src="scripts/nav.js" defer></script>
+            <!-- Carousel related -->
+                <script src="scripts/carousel.js" defer></script>
     </head>
     <body>
         <!-- Start of HEADER -->
